--- a/purchases/.eslintrc.json
+++ b/purchases/.eslintrc.json
@@ -1,52 +1,59 @@
 {
     "env": {
-        "browser": true,
-        "es2021": true
+        "es2020": true,
+        "node": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "airbnb",
+        "airbnb-base",
         "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommended",
-        "prettier"
+        "prettier",
+        "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
+        "ecmaVersion": 12,
         "sourceType": "module"
     },
     "plugins": [
-        "react",
         "@typescript-eslint",
         "eslint-plugin-import-helpers",
         "prettier"
     ],
     "rules": {
-        "@typescript-eslint/no-use-before-define": [
-            "error"
+        "camelcase": "off",
+        "import/no-unresolved": "error",
+        "@typescript-eslint/naming-convention": [
+            "error",
+            {
+                "selector": "interface",
+                "format": [
+                    "PascalCase"
+                ],
+                "custom": {
+                    "regex": "^I[A-Z]",
+                    "match": true
+                }
+            }
         ],
-        "arrow-body-style": "off",
-        "prefer-arrow-callback": "off",
+        "class-methods-use-this": "off",
+        "import/prefer-default-export": "off",
+        "no-shadow": "off",
+        "no-console": "off",
+        "no-useless-constructor": "off",
+        "no-empty-function": "off",
+        "lines-between-class-members": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
             {
-                "ts": "never",
-                "tsx": "never"
+                "ts": "never"
             }
         ],
-        "camelcase": "off",
-        "class-methods-use-this": "off",
-        "import/prefer-default-export": "off",
         "import-helpers/order-imports": [
             "warn",
             {
                 "newlinesBetween": "always",
                 "groups": [
-                    "/^react/",
                     "module",
                     "/^@/",
                     [
@@ -69,22 +76,7 @@
                 ]
             }
         ],
-        "no-use-before-define": "off",
-        "prettier/prettier": "error",
-        "react/function-component-definition": "off",
-        "react/jsx-filename-extension": [
-            1,
-            {
-                "extensions": [
-                    ".jsx",
-                    ".tsx"
-                ]
-            }
-        ],
-        "react/jsx-props-no-spreading": "off",
-        "react/prop-types": "off",
-        "react/require-default-props": "off",
-        "space-before-function-paren": "off"
+        "prettier/prettier": "error"
     },
     "settings": {
         "import/resolver": {
