--- a/classroom/package.json
+++ b/classroom/package.json
@@ -22,7 +22,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.0.0",
-    "@prisma/client": "3.12.0",
+    "@prisma/client": "^3.13.0",
     "apollo-server-express": "^3.6.7",
     "express-jwt": "^6.1.1",
     "graphql": "^16.3.0",
