--- a/purchases/package.json
+++ b/purchases/package.json
@@ -22,8 +22,9 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.0.0",
-    "@prisma/client": "3.12.0",
+    "@prisma/client": "^3.13.0",
     "apollo-server-express": "^3.6.7",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "express-jwt": "^6.1.1",
     "graphql": "^16.3.0",
     "jwks-rsa": "^2.0.5",
