--- a/purchases/.eslintrc.json
+++ b/purchases/.eslintrc.json
@@ -76,7 +76,12 @@
                 ]
             }
         ],
-        "prettier/prettier": "error"
+        "prettier/prettier": [
+            "warn",
+            {
+                "endOfLine": "auto"
+            }
+        ]
     },
     "settings": {
         "import/resolver": {
