--- a/classroom/.eslintrc.json
+++ b/classroom/.eslintrc.json
@@ -22,19 +22,6 @@
     "rules": {
         "camelcase": "off",
         "import/no-unresolved": "error",
-        "@typescript-eslint/naming-convention": [
-            "error",
-            {
-                "selector": "interface",
-                "format": [
-                    "PascalCase"
-                ],
-                "custom": {
-                    "regex": "^I[A-Z]",
-                    "match": true
-                }
-            }
-        ],
         "class-methods-use-this": "off",
         "import/prefer-default-export": "off",
         "no-shadow": "off",
@@ -76,7 +63,12 @@
                 ]
             }
         ],
-        "prettier/prettier": "error"
+        "prettier/prettier": [
+            "warn",
+            {
+                "endOfLine": "auto"
+            }
+        ]
     },
     "settings": {
         "import/resolver": {
