--- a/gateway/package.json
+++ b/gateway/package.json
@@ -16,13 +16,14 @@
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
   },
   "dependencies": {
-    "@apollo/gateway": "^2.0.2",
-    "@nestjs/apollo": "^10.0.11",
+    "@apollo/gateway": "^0.50.0",
+    "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/graphql": "^10.0.11",
+    "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.0.0",
-    "apollo-server-express": "^3.7.0",
+    "apollo-server-express": "^3.6.7",
+    "graphql": "15.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -41,7 +42,7 @@
     "source-map-support": "^0.5.20",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
+    "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   }
 }
