--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@auth0/nextjs-auth0": "^1.7.0",
     "graphql": "15.8.0",
     "next": "12.1.4",
+    "next-http-proxy-middleware": "^1.2.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
