--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.4",
@@ -40,7 +41,9 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "graphql-codegen-apollo-next-ssr": "^1.7.2",
+    "postcss": "^8.4.13",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
 }
