--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "^3.6.4",
     "@auth0/nextjs-auth0": "^1.7.0",
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
     "graphql": "15.8.0",
     "next": "12.1.4",
     "next-http-proxy-middleware": "^1.2.4",
