--- a/web/codegen.yml
+++ b/web/codegen.yml
@@ -2,11 +2,9 @@ overwrite: true
 
 schema: 'http://localhost:3001/graphql'
 
-documents: './src/graphql/**/*.gql'
-
 generates:
   src/graphql/generated/graphql.tsx:
-  #  documents: './src/graphql/**/*.gql'
+    documents: './src/graphql/**/*.gql'
     plugins:
       - 'typescript'
       - 'typescript-operations'
@@ -20,7 +18,7 @@ generates:
       documentMode: graphQLTag
 
   src/graphql/generated/page.tsx:
-  #  documents: './src/graphql/private/**/*.gql'  
+    documents: './src/graphql/private/**/*.gql'  
     config:
       documentMode: external
       importDocumentNodeExternallyFrom: ./graphql
@@ -35,18 +33,18 @@ generates:
     plugins:
       - 'graphql-codegen-apollo-next-ssr'
 
-  # src/graphql/generated/pagePublic.tsx:
-  #   documents: './src/graphql/public/**/*.gql'
-  #   config:
-  #     documentMode: external
-  #     importDocumentNodeExternallyFrom: ./graphql
-  #     reactApolloVersion: 3
-  #     withHooks: true
-  #     contextType: 'ApolloClientContext'
-  #     contextTypeRequired: true
-  #     apolloClientInstanceImport: '../../lib/withPublicApollo'
-  #   preset: import-types
-  #   presetConfig:
-  #     typesPath: ./graphql
-  #   plugins:
-  #     - 'graphql-codegen-apollo-next-ssr'
+  src/graphql/generated/pagePublic.tsx:
+    documents: './src/graphql/public/**/*.gql'
+    config:
+      documentMode: external
+      importDocumentNodeExternallyFrom: ./graphql
+      reactApolloVersion: 3
+      withHooks: true
+      contextType: 'ApolloClientContext'
+      contextTypeRequired: true
+      apolloClientInstanceImport: '../../lib/withPublicApollo'
+    preset: import-types
+    presetConfig:
+      typesPath: ./graphql
+    plugins:
+      - 'graphql-codegen-apollo-next-ssr'
